Exposed some extra fields from messages
